refactored alpha miner ussage